# zoomcamp

./: .gitignore  .vimwiki_tags  README.md  flake.nix  pyproject.toml  reload.sh
nix/: README.md  configuration.nix  deploy.nix  shell.nix
nix/docker/: loader.nix
nix/provisioning/: configuration.nix  default.nix
src/aux/: main.tf
src/m1_module/: README.md  __main__.py  _main.py  docker-compose.yaml  main.tf  parser.py  pg_conn.py
src/m1_module/terraform/: .terraform.lock.hcl  configuration.nix  main.tf
vm/: configuration.nix  flake.nix
