[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zoomcamp"
version = "0.1.0"
description = "Zoomcamp repo for cohort 2024"
authors = [
    "francocalvo <dev@francocalvo.ar>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
packages = [
    { include = "zoomcamp", from = "src" },
]

[tool.poetry.scripts]
zoomcamp = "zoomcamp._main:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 88

[tool.pyright]
exclude = [
    ".venv",
    ".direnv",
]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.ruff]
select = [ "ALL" ]
ignore = [
    # Pyright automatically infers the type of `self`
    "ANN101",

    # Pyright automatically infers the type of `cls`
    "ANN102",

    # In some cases actively detrimental; somewhat conflicts with black
    "COM",

    # In combination with D213, this results in noisy diffs and inconsistencies
    # See also <https://github.com/charliermarsh/ruff/issues/4174>.
    "D200",

    # This results inconsistencies between function and class docstrings
    # See also <https://github.com/charliermarsh/ruff/issues/4175>.
    "D202",

    # D211 is preferred since the extra blank line isn't visually useful
    "D203",

    # D213 is preferred since it's more readable and allows more characters
    "D212",

    # Covered by D401, which is more restrictive
    "D415",

    # Too many false-positives
    "ERA",

    # Just use a recent version of Python
    "FA",

    # This would just discourage documenting deficiences, not committing them
    "FIX",

    # Type-checkers interpret redundant `as` as exporting an item
    "PLC0414",

    # False-positives with chained function calls
    "RSE102",

    # Not applicable
    "T20",

    # Causes churn and awful looking import blocks for little gain
    "TCH",

    # Just look at the file history
    "TD002",

    # Not everything is worth a link
    "TD003",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "D100",
    "D103",
    "D104",
    "S101",
]

[tool.coverage.report]
skip_covered = true
skip_empty = true

[tool.pytest.ini_options]
# Use recommended import mode
addopts = [
    "--import-mode=importlib",
]

# Make it so you don't have to prefix every file with `test_`
python_files = "*.py"
testpaths = [
    "tests",
]
